--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username:  R2robot
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+theme: minima
 plugins:
   - jekyll-feed
 
